package org.example.airports.domain;

public enum ContactInfo {
    Email,
    Phone,
    Website,
}
